# Hyperelastic-Model-Simulation

./: README.md
Flesh Simulation/Assets/: HyperelasticCube.cs  HyperelasticCube.unity
Flesh Simulation/Assets/Mats/: Cube.mat
Flesh Simulation/Assets/Scenes/: SampleScene.unity
Flesh Simulation/ProjectSettings/: ProjectSettings.asset
Flesh Simulation/UserSettings/: EditorUserSettings.asset
snh_code/: CMakeLists.txt
snh_code/cubesim/: CMakeLists.txt
